// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountOfChildrenField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="amountOfChildrenField"
          name="name"
          placeholder="Liczba osób na utrzymaniu"
          type="text"
          value="test"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podana ilość jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<AmountOfChildrenField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="amountOfChildrenField"
  name="name"
  placeholder="Liczba osób na utrzymaniu"
  type="text"
  value=""
/>
`;

exports[`<AmountOfChildrenField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="amountOfChildrenField"
          label="Test"
          name="name"
          placeholder="Liczba osób na utrzymaniu*"
          required=""
          type="text"
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<AmountOfChildrenField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="amountOfChildrenField"
          label="Test"
          name="name"
          placeholder="Liczba osób na utrzymaniu"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
